--- a/src/Components/Layout/Sidebar/sidebar.css
+++ b/src/Components/Layout/Sidebar/sidebar.css
@@ -171,7 +171,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) and (min-width: 992px) {
   .toggle-sidebar {
     display: flex;
   }
