--- a/src/Components/Layout/Sidebar/components/GetPlaylist/getPlaylist.css
+++ b/src/Components/Layout/Sidebar/components/GetPlaylist/getPlaylist.css
@@ -68,10 +68,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 400;
+    font-weight: 600;
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     overflow: hidden;
+    padding: 0px 15px;
     width: 90%;
   }
 
