--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -1,5 +1,3 @@
-
-
 .search-container {
   display: flex;
   flex-direction: column;
@@ -7,24 +5,7 @@
   width: 100%;
   align-items: center;
 }
-
-.searchHeader{
-  padding:3rem 2rem 2rem;
-  
-}
-.search-heading {
-  padding: 1rem;
-  font-size: 1rem;
-}
-.search-results{
-  display: flex;
-  flex-direction: column;
-
-  width: 100%;
-  align-items: center;
-}
-
-.searchHeader{
+.search-header{
   padding:3rem 2rem 2rem;
   
 }
@@ -41,9 +22,8 @@
   justify-content: center; 
   align-items: center; 
   width: 100%;
-  min-height: 100vh;
 }
-.button-add-results-container{
+.search-button-add-results-container{
   display: flex;
   flex-direction: row;
   max-height: 2rem;
@@ -52,7 +32,7 @@
 
 }
 
-.button-add-results-container button {
+.search-button-add-results-container button {
   width: fit-content; 
   height: 2rem; 
   font-size: 0.7rem; 
@@ -63,17 +43,18 @@
   border: 1px solid white;
   transition: background-color 0.3s ease, transform 0.3s ease;
   cursor: pointer;
+  margin-left: 0;
 }
 
-.track-img-name-container{
+.search-track-img-name-container{
   display:flex;
   justify-items: center;
   align-items: center;
   gap: 2rem;
-  min-height: 100vh;
+  
 }
 
-.button-add-results-container{
+.search-button-add-results-container{
   display: flex;
   flex-direction: row;
   max-height: 2rem;
@@ -82,7 +63,7 @@
 
 }
 
-.button-add-results-container button {
+.search-button-add-results-container button {
   width: fit-content; 
   height: 2rem; 
   font-size: 0.7rem; 
@@ -95,42 +76,13 @@
   cursor: pointer;
 }
 
-.track-img-name-container{
-  display:flex;
-  justify-items: center;
+.track-img-name-container {
+  display: grid;
+  grid-template-columns: 56px 1fr; /* 3.5rem = 56px */
   align-items: center;
-  gap: 2rem
-}
-
-.search-bar-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1rem;
-}
-
-.search-bar input {
-  padding: 0.75rem 1rem;
-  border-radius: 25px;
-  border: 2px solid #ddd;
-  background-color: var(--searchBar-color);
-  color: var(--primary-text-color);
-  font-size: var(--normal-text-size);
+  gap: 2rem;
   width: 100%;
-  max-width: 400px;
-  transition: all 0.3s ease;
 }
-
-.search-bar input:focus {
-  outline: none;
-  border-color: var(--highlight-text-color);
-  background-color: #444;
-}
-
-.search-bar input::placeholder {
-  color: var(--secondary-text-color);
-}
-
-
 
 .search-results {
   display: flex;
@@ -145,29 +97,20 @@
   margin: 0;
 }
 
-.single-track-container {
+.search-single-track-container {
   display: flex;
-  flex-direction: row;
-  align-items:center;
-  justify-content: space-between;
-  width:100%;
-  align-items:center;
-  justify-content: space-between;
-  width:100%;
-  gap: 1.5rem;
+  align-items: center;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.093);
-  transition: all 500ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  cursor: pointer;
-  will-change: transform;
-
-
+  gap: 1.5rem;
+  width: 100%;
+  min-width: var(--container-width);
+  max-width: var(--container-width);
 }
 
-.single-track-container:hover {
+
+
+
+.search-single-track-container:hover {
   color: var(--primary-text-color);
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
@@ -177,57 +120,50 @@
     background-color:#333333;
 }
 
-.single-track-container:active {
+.search-single-track-container:active {
   background-color: var(--button-hover-color);
   box-shadow: none;
   transform: translateY(0);
 }
 
-.single-track-container:focus {
+.search-single-track-container:focus {
   border-color: rgba(0, 0, 0, 0.985);
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
   color: var(--secondary-text-color);
 }
-
-
-
-.track-info {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+.search-track-info {
+  width: 4rem;
+  flex-shrink: 0;
 }
 
-.track-image {
+.search-track-image {
   width: 4rem;
   height: 4rem;
   border-radius: 4px;
+  object-fit: cover;
 }
 
-.track-details {
+.search-track-details {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.track-name {
+.search-track-name {
   font-size: 1.5rem;
   font-size: 1.5rem;
   color: var(--primary-text-color);
   text-decoration: none;
   text-decoration: none;
-  
-
   text-decoration: none;
-  
-
 }
 
-.single-track-container a {
+.search-single-track-container a {
   text-decoration: none;
   color: var(--primary-text-color);
 }
 
-.single-track-container a {
+.search-single-track-container a {
   text-decoration: none;
   color: var(--primary-text-color);
 }
@@ -237,7 +173,7 @@
   font-size: 1.1rem;
 }
 
-.filter-buttons button{
+.search-filter-buttons button{
   color:white;
   width: fit-content; 
   height: 2rem; 
@@ -250,85 +186,235 @@
   transition: background-color 0.3s ease, transform 0.3s ease;
   cursor: pointer;
 }
+.search-artist-container {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  gap: 1.5rem;
+  width: 100%;
+  min-width: var(--container-width);
+  max-width: var(--container-width);
+  transition: all 500ms cubic-bezier(.23, 1, 0.32, 1);
+  cursor: pointer;
+}
 
-@media (max-width: 600px) {
+.search-artist-container:hover {
+  color: var(--primary-text-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+  background-color: #333333;
+}
 
-  .search-bar-container {
-    flex-direction: column;
-    gap: 0.5rem;
+.search-artist-info {
+  width: 4rem;
+  flex-shrink: 0;
+}
+
+.search-artist-image {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.search-artist-details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.search-artist-name {
+  font-size: 1.5rem;
+  color: var(--primary-text-color);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.search-artist-followers {
+  font-size: 0.9rem;
+}
+
+.search-artist-type {
+  font-size: 0.8rem;
+  text-transform: capitalize;
+
+}.search-album-container {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  gap: 1.5rem;
+  width: 100%;
+  min-width: var(--container-width);
+  max-width: var(--container-width);
+  transition: all 500ms cubic-bezier(.23, 1, 0.32, 1);
+  cursor: pointer;
+}
+
+.search-album-container:hover {
+  color: var(--primary-text-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+  background-color: #333333;
+}
+
+.search-album-info {
+  width: 4rem;
+  flex-shrink: 0;
+}
+
+.search-album-image {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+.search-album-details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.search-album-name {
+  font-size: 1.5rem;
+  color: var(--primary-text-color);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.search-album-artist {
+  font-size: 0.9rem;
+}
+
+.search-album-type {
+  font-size: 0.8rem;
+  text-transform: capitalize;
+}
+
+@media screen and (max-width: 768px) {
+  .search-album-container {
+      padding: 0.8rem;
+      gap: 1rem;
   }
 
-  .search-bar input {
-    max-width: 90%;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-  }
-
-
-  .search-results {
-    padding: 0.5rem;
-  }
-
-  .single-track-container {
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-  }
-
-
-  .track-info {
-   
-    gap: 0.5rem;
-  }
-
-  .track-image {
-    width: 3rem;
-    height: 3rem;
-  }
-
-  .track-name {
-    font-size: 1.4rem;
-  }
-
-  .track-details {
-    align-items: center;
-    text-align: center;
-  }
-
-  .error-message {
-    font-size: 1rem;
+  .search-album-name {
+      font-size: 1.2rem;
   }
 }
 
-@media (max-width: 768px) {
-
-  .search-bar-container {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-
-  .search-bar input {
-    max-width: 80%;
-    padding: 0.75rem;
-  }
-
-
-  .single-track-container {
-    gap: 1.5rem;
-    padding: 1rem;
-  }
-
-  .track-info {
-    /* flex-direction: column; */
+@media screen and (max-width: 768px) {
+  .search-single-track-container {
+    display: grid;
+    grid-template-columns: 4rem 1fr auto;
+    align-items: center;
     gap: 1rem;
-  }
+    padding: 1rem;
+    width: 100%;
+}
 
-  .track-image {
-    width: 3.5rem;
-    height: 3.5rem;
-  }
+.search-track-img-name-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
 
-  .track-name {
-    font-size: 1.6rem;
+.search-track-info {
+    width: 4rem;
+    flex-shrink: 0;
+}
+
+.search-track-image {
+    width: 4rem;
+    height: 4rem;
+    object-fit: cover;
+}
+
+.search-track-name {
+  font-size: 1rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: calc(100vw - 12rem);
+}
+
+.search-button-add-results-container {
+    display: flex;
+    gap: 0.5rem;
+    margin-left: auto;
+}
+
+}
+@media (max-width: 600px) {
+  .search-results {
+      padding: 0;
+      width: 100%;
+  }
+    /* Shared container styles */
+    .search-single-track-container
+    {
+        display: grid;
+        grid-template-columns: 20rem 1fr auto;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.8rem 0.4rem;
+        width: 100%;
+        min-width: unset;
+        max-width: 100%;
+        margin: 0;
+    }
+    .search-artist-container,
+    .search-album-container {
+      margin: 10px;
+    padding-left: 100px;
+    }
+   /* Shared info container styles */
+   .search-track-img-name-container,
+   .search-album-info,
+   .search-artist-info {
+       width: 100%;
+       gap: 0.5rem;
+       padding-left: 0;
+   }
+   .search-track-info,
+    .search-album-info,
+    .search-artist-info {
+        width: 3rem;
+        min-width: 3rem;
+    }
+
+      /* Shared image styles */
+      .search-track-image,
+      .search-album-image,
+      .search-artist-image {
+          width: 3rem;
+          height: 3rem;
+          object-fit: cover;
+      }
+  
+}
+
+@media screen and (min-width: 1200px) {
+  :root {
+      --container-width: 800px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  :root {
+      --container-width: 700px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+      --container-width: 500px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  :root {
+      --container-width: 300px;
+
   }
 }
