--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -109,7 +109,7 @@
 
 
 
-
+/* 
 .search-single-track-container:hover {
   color: var(--primary-text-color);
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
@@ -118,7 +118,7 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
     background-color:#333333;
-}
+} */
 
 .search-single-track-container:active {
   background-color: var(--button-hover-color);
