--- a/src/Components/Layout/Outlet/SearchPage/searchpage.css
+++ b/src/Components/Layout/Outlet/SearchPage/searchpage.css
@@ -346,27 +346,20 @@
 
 }
 @media (max-width: 600px) {
-  .search-results {
-      padding: 0;
-      width: 100%;
-  }
+ 
     /* Shared container styles */
     .search-single-track-container
     {
-        display: grid;
-        grid-template-columns: 20rem 1fr auto;
-        align-items: center;
-        gap: 0.5rem;
-        padding: 0.8rem 0.4rem;
-        width: 100%;
-        min-width: unset;
-        max-width: 100%;
-        margin: 0;
+      display: grid;
+      grid-template-columns: 3rem 1fr;
+      grid-template-rows: auto auto;
+      gap: 0.5rem;
+      padding: 0.8rem 0.4rem;
+      width: 100%;
     }
     .search-artist-container,
     .search-album-container {
       margin: 10px;
-    padding-left: 100px;
     }
    /* Shared info container styles */
    .search-track-img-name-container,
@@ -379,9 +372,20 @@
    .search-track-info,
     .search-album-info,
     .search-artist-info {
+        grid-row: 1 / 3;
         width: 3rem;
-        min-width: 3rem;
     }
+    .search-track-name {
+      grid-column: 2;
+      grid-row: 1;
+  }
+
+    .search-button-add-results-container {
+      grid-column: 2;
+      grid-row: 2;
+      justify-content: flex-start;
+      margin-left: 0;
+  }
 
       /* Shared image styles */
       .search-track-image,
