--- a/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToPlaylistButton.css
+++ b/src/Components/Layout/Outlet/PlaylistPage/AddTrackToPlaylist/addToPlaylistButton.css
@@ -30,13 +30,13 @@
   .dropdown-button:disabled:hover {
     background-color: rgba(0, 0, 0, 0.1);
   }
-
+  
   .dropdown-menu {
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
-    background-color: var(--secondary-background-color);
+    background-color: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     margin-top: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -55,9 +55,9 @@
     font-weight: 500;
     color: var(--primary-text-color);
     text-align: center;
-    background-color: rgb(0, 0, 0);
-border: 1px solid var(--secondary-background-color);
-z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.82);
+
+
   }
   
   .dropdown-item:hover {
