--- a/src/Components/Layout/Sidebar/sidebar.css
+++ b/src/Components/Layout/Sidebar/sidebar.css
@@ -1,3 +1,5 @@
+/* Sidebar.css should be filename */
+
 .sideBar {
   grid-column: 1;
   grid-row: 2/3;
@@ -10,7 +12,7 @@
   scrollbar-width: thin;
   scrollbar-color: #000000;
   transition: transform 0.6s ease-in-out;
-  overflow-x: hidden;  
+  overflow-x: hidden;
 }
 
 .sideBar.open {
@@ -21,7 +23,6 @@
 .sideBar.closed {
   transform: translateX(-100%);
 }
-
 
 .title-sidebar-container {
   display: flex;
@@ -37,7 +38,6 @@
   font-weight: 400;
   letter-spacing: 2px;
 }
-
 
 .toggle-sidebar {
   display: flex;
@@ -66,9 +66,8 @@
   left: 21%;
   transform: translateX(0);
   transition: left 0.7s ease-in-out, transform 0.3s ease;
-  border-radius: 50%
+  border-radius: 50%;
 }
-
 
 .toggle-sidebar:hover {
   background-color: #8e7ed8;
@@ -79,15 +78,14 @@
   height: 20px;
   font-size: 2rem;
   align-self: center;
-  justify-self:center;
-  display: flex;                  
-  justify-content: center;        
-  align-items: center;          
-  font-size: 2rem;             
-  width: 100%;                   
-  height: 100%;   
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  width: 100%;
+  height: 100%;
 }
-
 
 @media (max-width: 600px) {
   .sideBar {
@@ -96,7 +94,7 @@
     width: 100%;
     z-index: 100;
     transition: transform 0.3s ease-in-out;
-    overflow-x: hidden;  
+    overflow-x: hidden;
   }
 
   .toggle-sidebar {
@@ -113,7 +111,6 @@
     height: 40px;
     top: 59px;
     left: 20%;
- 
   }
 
   .title-sidebar-container {
@@ -139,15 +136,13 @@
   }
 }
 
-
-@media(min-width: 601px) and (max-width: 768px) {
+@media (min-width: 601px) and (max-width: 768px) {
   .sideBar {
     top: 60px;
     left: 0;
     width: 100%;
     z-index: 100;
     transition: transform 0.3s ease-in-out;
-
   }
   .sideBar-title {
     font-size: 1rem;
@@ -167,7 +162,6 @@
   .toggle-sidebar.open {
     top: 70px;
     left: 21%;
-
   }
 }
 
@@ -185,13 +179,9 @@
     font-weight: 400;
     padding-top: 0;
   }
-  
-  .toggle-sidebar.open { 
+
+  .toggle-sidebar.open {
     top: 70px;
     left: 21%;
-
   }
 }
-
-
-
